# TungstenUtils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: TungstenUtilsConfig.cmake.in  Version.hpp.in  cmake_uninstall.cmake.in
include/TungstenUtils/: DebugGetTypeName.hpp  Filesystem.hpp  FindAndReplace.hpp  ReadFile.hpp  SlotList.hpp  TungstenLogger.hpp  TungstenUtils.hpp  WriteFile.hpp  compiler.hpp  macros.hpp  platform.hpp  wIndex.hpp
include/TungstenUtils/compiler/: attributes.hpp  debugBreak.hpp
include/TungstenUtils/macros/: ansi.hpp  ansiConfig.hpp  assert.hpp  debugBreak.hpp  nameof.hpp  noOp.hpp
include/TungstenUtils/platform/: FallbackLogger.hpp  exceptionsConfig.hpp  windowsMinimal.hpp
src/: FindAndReplace.cpp  ReadFile.cpp  TungstenLogger.cpp  WriteFile.cpp  wUtilsPCH.cpp  wUtilsPCH.hpp
src/platform/: FallbackLogger.cpp
tests/: CMakeLists.txt  TestFindAndReplace.cpp  TestReadFile.cpp  TestSlotList.cpp  TestWriteFile.cpp
tests/res/: party.txt
